--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=ABeeZee:ital@0;1&display=swap');
 body {
-  font-family: Arial, sans-serif;
+  font-family: "ABeeZee", sans-serif;
   background-color: #f0f0f0;
   margin: 0;
   padding: 0;
@@ -22,4 +23,31 @@ body {
 
 #grille div:hover {
   background-color: lightgray;
+}
+
+nav{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+
+nav div{
+    border: 1px solid red;
+}
+
+.header-logo{
+    display: flex;
+    gap: 10px;
+}
+
+.scores{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.buttons{
+    display: flex;
+    gap: 10px;
 }
